# recipe-rag-assistant

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.qdrant  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
Qdrant/: docker-compose.yaml
Qdrant/qdrant_storage/: raft_state.json
Qdrant/qdrant_storage/collections/recipe-rag/0/: newest_clocks.json
data/: ground-truth-retrieval.csv  ground-truth-retrievel.csv  rag-eval-gpt-4o-mini.csv  rag-eval-gpt-4o.csv  recipes.csv
grafana/: dashboard.json  init.py
notebooks/: evaluation-data-generation.ipynb  rag-test.ipynb
recipe_assistant/: api_example.http  db.py  indexing.py  ingest.py  rag.py  scrape_recipes.py
recipe_assistant/app/: main.py
recipe_assistant/app/api/: endpoints.py
recipe_assistant/app/core/: config.py
recipe_assistant/app/models/: schemas.py
